// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register Controller /POST auth/register - should register an new user: RegisterCredentials 1`] = `
{
  "accessToken": "accessToken",
  "expiresIn": 86400000,
  "refreshToken": "refreshToken",
  "tokenType": "Bearer",
}
`;

exports[`Register Controller /POST auth/register - should throw an error for a to short password: RegisterPasswordToShortError 1`] = `
{
  "error": "Bad Request",
  "message": [
    "password must be longer than or equal to 6 characters",
  ],
  "statusCode": 400,
}
`;

exports[`Register Controller /POST auth/register - should throw an error for a to short username: RegisterUsernameToShortError 1`] = `
{
  "error": "Bad Request",
  "message": [
    "username must be longer than or equal to 3 characters",
  ],
  "statusCode": 400,
}
`;

exports[`Register Controller /POST auth/register - should throw an error for a username conflict: RegisterUsernameConflictError 1`] = `
{
  "message": "User with the given username already exists",
  "statusCode": 409,
}
`;

exports[`Register Controller /POST auth/register - should throw an error for missing password: RegisterPasswordMissingError 1`] = `
{
  "error": "Bad Request",
  "message": [
    "password must be longer than or equal to 6 characters",
    "password must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`Register Controller /POST auth/register - should throw an error for missing username: RegisterUsernameMissingError 1`] = `
{
  "error": "Bad Request",
  "message": [
    "username must be longer than or equal to 3 characters",
    "username must be a string",
  ],
  "statusCode": 400,
}
`;
